K8S/authors-db-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authors-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authors-db
  template:
    metadata:
      labels:
        app: authors-db
    spec:
      containers:
        - name: authors-db
          image: postgres
          ports:
            - containerPort: 5433
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: authors-pg-db
      volumes:
        - name: authors-pg-db
          persistentVolumeClaim:
            claimName: authors-postgres-claim
---
apiVersion: v1
kind: Service
metadata:
  name: authors-db-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: authors-db
  ports:
    - name: authors-db
      protocol: TCP
      port: 5433
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: authors-db-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: authors-db
  ports:
    - protocol: TCP
      port: 5433
      targetPort: 5432
