K8S/authors-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authors-deployment
  labels:
    app: authors-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authors-service
  template:
    metadata:
      labels:
        app: authors-service
    spec:
      containers:
        - name: authors-service
          image: apetrovic6/authors-service
          imagePullPolicy: IfNotPresent 
---
apiVersion: v1
kind: Service
metadata:
  name: authors-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: authors-service
  ports:
    - name: author-service-grpc
      protocol: TCP
      port: 80
      targetPort: 80
