K8S/books-db-depl.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: books-db-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-db
  template:
    metadata:
      labels:
        app: books-db
    spec:
      containers:
        - name: books-db
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: books-pg-db
      volumes:
        - name: books-pg-db
          persistentVolumeClaim:
            claimName: books-postgres-claim
---
apiVersion: v1
kind: Service
metadata:
  name: books-db-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: books-db
  ports:
    - name: books-db
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: books-db-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: books-db
  ports:
    - protocol: TCP
      port: 6666
      targetPort: 5432
