K8S/books-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-deployment
  labels:
    app: books-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-service
  template:
    metadata:
      labels:
        app: books-service
    spec:
      containers:
        - name: books-service
          image: apetrovic6/books-service
          imagePullPolicy: IfNotPresent 
---
apiVersion: v1
kind: Service
metadata:
  name: books-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: books-service
  ports:
    - name: book-service-grpc
      protocol: TCP
      port: 80
      targetPort: 80
