K8S/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: acme.com
      http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: gateway-clusterip-service
                port:
                  number: 80
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: client-clusterip-service
                port:
                  number: 80
